...
      onPressOut={() => {
        pressed.set(withSpring(1, Spring.press));
      }}
      disabled={disabled}
      accessibilityRole="button"
      accessibilityState={{ disabled }}
      accessibilityLabel={playing ? 'Pause' : 'Play'}>
      <Animated.View
        style={[
          styles.play,
          { width: size, height: size, borderRadius: size / 2 },
          large && styles.playLarge,
          disabled && styles.playDisabled,
...
